--- a/templates/pages/_globe.html.twig
+++ b/templates/pages/_globe.html.twig
@@ -28,10 +28,10 @@
 
 <div class="filters-column">
     <p>{{ 'globe.filter'|trans }}</p>
-    <div class="filters-button"><img src="{{ asset('build/filters.png') }}" alt="Icône des filtres de recherche">
+    <div class="filters-button"  id="filters-button"><img src="{{ asset('build/filters.png') }}" alt="Icône des filtres de recherche">
     </div>
 </div>
-<div class="filters">
+<div class="filters" id="filters">
     <div id="category" class="filters-bloc-1">
         <div class="filter-box category" id="reve" title="Rêve">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 383.95 383.95">
